--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         >
           <img src="./images/youtube.png" alt="youtube" />
         </a>
-        <a href="" class="contact gradient">
+        <a
+          href="https://www.linkedin.com/in/yan-graim-112045128/"
+          class="contact gradient"
+        >
           <img src="./images/linkedin.png" alt="tiktok" />
         </a>
         <a href="" class="contact gradient">
