Correção de links e inserção do fav icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -48,17 +49,23 @@
       </ul>
 
       <footer>
-        <a href="https://twitter.com/yangraim" class="contact gradient">
+        <a
+          href="https://twitter.com/yangraim"
+          target="_blank"
+          class="contact gradient"
+        >
           <img src="./images/twitter.png" alt="twitter" />
         </a>
         <a
           href="https://www.youtube.com/channel/UCK27eqFVp--WbbvpgZIr1Gg"
+          target="_blank"
           class="contact gradient"
         >
           <img src="./images/youtube.png" alt="youtube" />
         </a>
         <a
           href="https://www.linkedin.com/in/yan-graim-112045128/"
+          target="_blank"
           class="contact gradient"
         >
           <img src="./images/linkedin.png" alt="tiktok" />
