Adição do número de telefone

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         >
           <img src="./images/linkedin.png" alt="tiktok" />
         </a>
-        <a href="" class="contact gradient">
+        <a href="tel:+5591983520987" class="contact gradient">
           <img src="./images/phone.png" alt="phone" />
         </a>
       </footer>
